...
        }
    }

    if (sessionState.authState == SessionAuthState.CHECKING) {
        LoadingView(
            message = "Проверяем сессию",
            modifier = Modifier.testTag("screen_home")
        )
        return
    }

    HomeScreen(
        uiState = uiState,
...
